Fix list overflow background

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -8,26 +8,30 @@ body {
 
 #tasks {
   background: #fff;
-  border-right: 1px solid #bbb;
-  height: 100%;
+  padding: 0;
 }
 
+  #tasks li {
+    border:1px solid #aaa;
+    border-top:0;
+    border-bottom: 1px solid #eee;
+  }
+
 #tasklists {
-  height: 100%;
-  border-right: 1px solid #bbb;
 }
   
   #tasklists li {
     font-size: 1.5rem;
     line-height: 3.5rem;
     height: 3.5rem;
+    background: none;
   }
 
 li {
+  background: #fff;
   list-style: none;
   padding: .5rem;
   margin: 0 auto;
-  border-bottom: 1px solid #eee;
   display: block;
   width: 100%;
   line-height: 2rem;
